add both tests
